--- a/src/app/sales/show-sale/show-sale.component.html
+++ b/src/app/sales/show-sale/show-sale.component.html
@@ -10,52 +10,66 @@
     <div class="cardModule" [@card]="state.card">
 
         <div class="options">
+            <i class="material-icons" (click)="window = 1" matTooltip="Ver Venta">visibility</i>
             <i class="material-icons" (click)="print()" matTooltip="Imprimir recibo">print</i>
-            <i class="material-icons" (click)="deleteProcess()" matTooltip="Eliminar Recibo" *ngIf="auth.user_type_id > 5">delete</i>
+            <i class="material-icons" (click)="window = 2" matTooltip="Eliminar Recibo" *ngIf="auth.user_type_id > 5">delete</i>
         </div>
-        <h1 class="centerText">Venta</h1>
-        <form class="flex">
-            <div class="l6">
-                <p disabled>Folio #{{sale.id}}</p>
-            </div>
+        <div *ngIf="window == 1">
+            <h1 class="centerText">Venta</h1>
+            <form class="flex">
+                <div class="l6">
+                    <p disabled>Folio #{{sale.id}}</p>
+                </div>
 
-            <div class="l6">
-                <p disabled>Vendedor: <span *ngIf="sale.creator">{{sale.creator.name}}</span></p>
-            </div>
+                <div class="l6">
+                    <p disabled>Vendedor: <span *ngIf="sale.creator">{{sale.creator.name}}</span></p>
+                </div>
 
-            <div class="l6">
-                <p disabled>Total: ${{sale.total}}</p>
-            </div>
-            <div class="l6">
-                <p>Tipo de venta: {{sale.typeView}}</p>
-            </div>
-            <div class="l6">
-                <p>Fecha/Hora: {{sale.created_at}}</p>
-            </div>
+                <div class="l6">
+                    <p disabled>Total: ${{sale.total}}</p>
+                </div>
+                <div class="l6">
+                    <p>Tipo de venta: {{sale.typeView}}</p>
+                </div>
+                <div class="l6">
+                    <p>Fecha/Hora: {{sale.created_at}}</p>
+                </div>
 
 
-        </form>
-        <h4>Descripción</h4>
-        <div class="responsive-table">
-            <table>
-                <thead>
-                    <tr>
-                        <th>Producto</th>
-                        <th>Precio</th>
-                        <th>Cantidad</th>
-                        <th>Subtotal</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let product of sale.description">
-                        <td>{{product.product.name}}</td>
-                        <td>{{product.price}}</td>
-                        <td>{{product.quantity}}</td>
-                        <td>{{product.subtotal}}</td>
-                    </tr>
-                </tbody>
-            </table>
+            </form>
+            <h4>Descripción</h4>
+            <div class="responsive-table">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Producto</th>
+                            <th>Precio</th>
+                            <th>Cantidad</th>
+                            <th>Subtotal</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let product of sale.description">
+                            <td>{{product.product.name}}</td>
+                            <td>{{product.price}}</td>
+                            <td>{{product.quantity}}</td>
+                            <td>{{product.subtotal}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
+
+        <div *ngIf="window == 2">
+            <h3>¿Estas seguro/a que desea borrar esta Venta?</h3>
+            <p>Una vez eliminado ya no se podra recuperar. Si la venta se realizo en este periodo de corte el dinero del recibo se reintegrara a la caja en dado caso elimine la venta completamente.</p>
+            <div class="confirmCancel">
+                <button class="btn btnCancel" (click)="window = 1">Cancelar</button>
+                <button class="btn orange" (click)="delete(2)">Eliminar sin recibo</button>
+                <button class="btn btnDelete" (click)="delete(1)">Eliminar</button>
+            </div>
+        </div>
+
     </div>
 
 </div>
