--- a/src/app/user/delete-user/delete-user.component.html
+++ b/src/app/user/delete-user/delete-user.component.html
@@ -26,7 +26,7 @@
                         <p>Deudas de Abarroteria: # {{ safe.debts }}</p>
                     </div>
 
-                    <div *ngIf="user.user_type_id == 2 || user.user_type_id == 3">
+                    <div *ngIf="user.user_type_id >= 2 || user.user_type_id <= 4">
                         <p>Pagos: # {{ safe.payments }}</p>
                         <p>Deudas de Abarroteria: # {{ safe.debts }}</p>
                     </div>
