Sale Cane be deleted

--- a/src/app/monthly-prices/monthly-price.component.html
+++ b/src/app/monthly-prices/monthly-price.component.html
@@ -2,13 +2,12 @@
 <router-outlet></router-outlet>
 <div *ngIf="principal">
 
-<H2 class="centerText">Precios del Gimnasio</H2>
+<H2 class="centerText">Mensualidades por Horas</H2>
 <div class="responsive-table">
 
     <table *ngIf="credential >= 6">
         <thead>
             <tr>
-
                 <th *ngIf="sort == 0" (click)="sortHoursUp()">Horas
                     <mat-icon>arrow_drop_down</mat-icon>
                 </th>
@@ -16,25 +15,21 @@
                 <th *ngIf="sort == 1" (click)="sortHoursDown()">Horas
                     <mat-icon>arrow_drop_up</mat-icon>
                 </th>
-
                 <th>Costo</th>
                 <th>Fecha/Creacion</th>
-                <th>Ultima Actualización</th>
-                
+                <th>Ultima Actualización</th>                
             </tr>
         </thead>
 
         <tbody>
-
             <tr *ngFor="let x of monthlyPrices"  [routerLink]="['./ver', x.id]">
                 <td> {{ x.hours }}</td>
                 <td> ${{ x.cost }}</td>                
                 <td>{{ x.created_at | date: format }} {{ x.created_at | date: 'hh:mm a' }}</td>
                 <td>{{ x.updated_at | date: format }} </td>               
             </tr>
-
-
         </tbody>
+        
     </table>
 
     <table *ngIf="credential <= 5 && credential >= 1">
