--- a/src/app/schedules/schedules.component.html
+++ b/src/app/schedules/schedules.component.html
@@ -28,7 +28,7 @@
         </div>            
     </div>
     <div class="l2">
-        <label>Desde</label><br>
+        <label>Hasta</label><br>
         <div class="icon-left">            
             <input [(ngModel)]="search.to"  name="to" type="time" (change)="getSchel()">
             <label class="icon"><mat-icon>access_time</mat-icon></label>
