--- a/src/app/structure/structure.component.html
+++ b/src/app/structure/structure.component.html
@@ -11,18 +11,14 @@
     <div style="background-image: url(../assets/img/backgroundMenu.jpeg)" id="userInfSection">
         <div>
 
-            <img src="{{ userData.getUserImg() }}">
-            <p>{{userData.getUserName() | lowercase}}</p>
-            <p id="emailInf">{{userData.getUserEmail() | lowercase}}</p>
+            <img src="{{ auth.img }}">
+            <p>{{auth.name | lowercase}}</p>
+            <p id="emailInf">{{auth.email | lowercase}}</p>
             <div id="userTypeInf">
-                <p *ngIf="userData.getUserType() == 1">Alumno/a</p>
-                <p *ngIf="userData.getUserType() == 2">Maestro/a</p>
-                <p *ngIf="userData.getUserType() == 3">Cajera</p>
-                <p *ngIf="userData.getUserType() == 4">Contador</p>
-                <p *ngIf="userData.getUserType() == 6">Administrador</p>
-                <p *ngIf="userData.getUserType() == 7">Desarrollador</p>
-                <p *ngIf="userData.getUserType() >= 6" class="cash" [routerLink]="['/cutout']"> $ {{ userData.getCash() }}</p>
-                <p *ngIf="userData.getUserType() < 5 && userData.getUserType() > 1"> $ {{ userData.getCash() }}</p>
+                <p >{{ auth.typeView}}</p>
+                
+                <p *ngIf="auth.user_type_id >= 6" class="cash" [routerLink]="['/cutout']"> $ {{ storage.getCash() }}</p>
+                <p *ngIf="auth.user_type_id < 5 && auth.user_type_id > 1"> $ {{ storage.getCash() }}</p>
             </div>
 
 
@@ -31,27 +27,27 @@
 
     <h5>APLICACIÓN</h5>
 
-    <ul *ngIf="userData.getUserType() >= 6">
+    <ul *ngIf="auth.user_type_id >= 6">
 
         
         <li [routerLink]="['/receipt']"><button mat-button>Recibos</button></li>
         <li [routerLink]="['/parking']"><button mat-button>Estacionamiento</button></li>
         <li [routerLink]="['/schedules']"><button mat-button>Horarios</button></li>
-        <li [routerLink]="['/asistencias']" *ngIf="userData.getUserType() >= 6"><button mat-button>Asistencias</button></li>
+        <li [routerLink]="['/asistencias']" *ngIf="auth.user_type_id >= 6"><button mat-button>Asistencias</button></li>
 
         
 
         <li [routerLink]="['/expenses']"><button mat-button>Gastos</button></li>        
 
-        <!-- <li [routerLink]="['/cutout']" *ngIf="userData.getUserType() >= 6"><button mat-button>Recorte de Caja</button></li> -->
-        <li [routerLink]="['/pago-trabajadores']" *ngIf="userData.getUserType() >= 6"><button mat-button>Pago Trabajadores</button></li>
+        <!-- <li [routerLink]="['/cutout']" *ngIf="auth.getUserType() >= 6"><button mat-button>Recorte de Caja</button></li> -->
+        <li [routerLink]="['/pago-trabajadores']" *ngIf="auth.user_type_id >= 6"><button mat-button>Pago Trabajadores</button></li>
 
     </ul>
 
     <h5>TIENDA</h5>
     <ul>
         <li [routerLink]="['/inventory']"><button mat-button>Inventario</button></li>
-        <li [routerLink]="['/sale-point']"><button mat-button>Punto de Venta <span class="notified">{{ userData.getSalesErrorConnection() }}</span></button></li>
+        <li [routerLink]="['/sale-point']"><button mat-button>Punto de Venta <span class="notified">{{ storage.getSalesErrorConnection() }}</span></button></li>
         <li [routerLink]="['/sales']"><button mat-button>Registro de Ventas</button></li>
         <li [routerLink]="['/sale-debt']"><button mat-button>Deudores Abarrotería</button></li>
     </ul>
@@ -63,7 +59,7 @@
         <li [routerLink]="['/monthly-cost']"><button mat-button>Mensualidades</button></li>
     </ul>
 
-    <ul *ngIf="userData.getUserType() <= 5 && userData.getUserType() >= 2">
+    <ul *ngIf="auth.user_type_id <= 5 && auth.user_type_id >= 2">
 
 
         <li [routerLink]="['/users']"><button mat-button>Usuarios</button></li>
@@ -76,7 +72,7 @@
 
         <!-- <li [routerLink]="['/inventory']"><button mat-button>Inventario</button></li> -->
 
-        <li [routerLink]="['/sale-point']"><button mat-button>Punto de Venta <span class="notified">{{ userData.getSalesErrorConnection() }}</span></button></li>
+        <li [routerLink]="['/sale-point']"><button mat-button>Punto de Venta <span class="notified">{{ auth.getSalesErrorConnection() }}</span></button></li>
 
         <li [routerLink]="['/sales']"><button mat-button>Registro de Ventas</button></li>
 
