Fixing problem with storage class to User.getAuth()

--- a/src/app/inventory/edit-product/edit-product.component.html
+++ b/src/app/inventory/edit-product/edit-product.component.html
@@ -19,19 +19,19 @@
                 <small class="smallError" *ngIf="form.name == 2">Nombre ya asignado</small>
             </div>
 
-            <div *ngIf="storage.getUserType() >= 6">
+            <div *ngIf="credential >= 6">
                 <label>Precio Público</label><br>
                 <input [(ngModel)]="productEditable.price_public" name="price_public" type="number" min="0"><br>
                 <small class="smallError" *ngIf="form.price == 1">Requerido</small>
             </div>
 
-            <div *ngIf="storage.getUserType() >= 6">
+            <div *ngIf="credential >= 6">
                 <label>Precio Interno</label><br>
                 <input [(ngModel)]="productEditable.price_intern" name="price_inter" type="number" min="0"><br>
                 <!-- <small class="smallError" *ngIf="form.price == 1">Requerido</small> -->
             </div>
 
-            <div *ngIf="storage.getUserType() >= 6">
+            <div *ngIf="credential >= 6">
                 <label>Costo de Compra</label><br>
                 <input [(ngModel)]="productEditable.cost_price" name="cost_price" type="number" min="0"><br>
             </div>
