--- a/src/app/inventory/new-product/new-product.component.html
+++ b/src/app/inventory/new-product/new-product.component.html
@@ -26,19 +26,19 @@
                 <small class="smallError" *ngIf="form.code == 2">Codigo ya asignado</small>
             </div>
 
-            <div *ngIf="storage.getUserType() >= 6">
+            <div *ngIf="credential >= 6">
                 <label>Precio Público</label><br>
                 <input [(ngModel)]="product.price_public" name="price_public" type="number" min="0"><br>
                 <small class="smallError" *ngIf="form.price == 1">Requerido</small>
             </div>
 
-            <div *ngIf="storage.getUserType() >= 6">
+            <div *ngIf="credential >= 6">
                 <label>Precio Interno</label><br>
                 <input [(ngModel)]="product.price_intern" name="price_inter" type="number" min="0"><br>
                 <!-- <small class="smallError" *ngIf="form.price == 1">Requerido</small> -->
             </div>
 
-            <div *ngIf="storage.getUserType() >= 6">
+            <div *ngIf="credential >= 6">
                 <label>Costo de Compra</label><br>
                 <input [(ngModel)]="product.cost_price" name="cost_price" type="number" min="0"><br>
             </div>
