--- a/src/app/expense/expense.component.html
+++ b/src/app/expense/expense.component.html
@@ -53,7 +53,7 @@
                 <!-- <th colspan="3">Opciones</th> -->
             </thead>
 
-            <tbody *ngIf="storage.getUserType() >= 6">
+            <tbody *ngIf="auth.user_type_id >= 6">
                 <tr *ngFor="let ex of expenses" [routerLink]="['/expenses/edit', ex.id]" >
                     <!-- <td class="left">{{ ex.$id }}</td> -->
                     <td>$ {{ ex.amount }}</td>
@@ -63,7 +63,7 @@
                 </tr>
             </tbody>
 
-            <tbody *ngIf="storage.getUserType() == 3">
+            <tbody *ngIf="auth.user_type_id <= 5">
                 <tr *ngFor="let ex of expenses">
                     <!-- <td class="left">{{ ex.$id }}</td> -->
                     <td>$ {{ ex$amount }}</td>
@@ -86,7 +86,7 @@
 
         <div class="moreOptions">
     
-            <a *ngIf="storage.getUserType() >= 6" class="linkExcel" href="{{ storage.getUrl() + 'excel/expenses' + storage.getTokenUrl() }}
+            <a *ngIf="auth.user_type_id >= 6" class="linkExcel" href="{{ storage.getUrl() + 'excel/expenses' + storage.getTokenUrl() }}
                     &from={{ search.from }}&to={{ search.to }}&id={{ search.id }}">
                 <button class="green" matTooltip="Descargar Gastos" matTooltipPosition="left" mat-fab id="cancelButton">
                     <mat-icon >archive</mat-icon>
