Initing With new view for edit schedules

--- a/src/app/user/show-user/edit-schedule/edit-schedule.component.css
+++ b/src/app/user/show-user/edit-schedule/edit-schedule.component.css
@@ -16,6 +16,11 @@ button {
     width: initial;
 }
 
+table button {
+    padding: 6px;
+    margin-top: 8px;
+}
+
 button:hover {
     opacity: .85;
     background: rgb(221, 221, 221);
